<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"

        app:selectionRequired="false"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/toDoChip"
            style="@style/TextStyle.LabelMedium.ChipStyle.Todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/to_do_task"
            android:textColor="@color/on_primary" />

        <com.google.android.material.chip.Chip
            android:id="@+id/InProgressChip"
            android:layout_gravity="center"
            style="@style/TextStyle.LabelMedium.ChipStyle.InProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progress_task" />

        <com.google.android.material.chip.Chip
            android:id="@+id/DoneChip"
            style="@style/TextStyle.LabelMedium.ChipStyle.Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_task"
            android:layout_gravity="end"/>

    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
