<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmation_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background"
    android:theme="@style/TopCornerCardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_medium"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/height_giant"
            android:layout_height="@dimen/height_tiny"
            android:layout_gravity="center"
            android:background="@drawable/drag_handle"
            android:layout_marginTop="@dimen/spacing_medium"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_giant"
            android:contentDescription="@string/done"
            app:srcCompat="@drawable/ic_confirmation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_giant"
            android:text="@string/are_you_sure"
            android:layout_gravity="center"
            android:textColor="@color/on_background_87"
            android:textSize="@dimen/text_medium"
            android:fontFamily="@font/lato"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:fontFamily="@font/lato"
            android:layout_gravity="center"
            android:text="@string/it_well_be_added_to_tasks"
            android:textAlignment="center"
            android:textColor="@color/on_primary_container_38"/>

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_giant"
            android:fontFamily="@font/lato"
            android:text="@string/confirm"
            android:background="@drawable/button_selector"
            android:textAllCaps="false"
            android:textColor="@color/on_primary"
            android:textSize="@dimen/text_medium"
            app:backgroundTint="@null"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@drawable/secondary_button_selector"
            android:fontFamily="@font/lato"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/on_primary_container_87"
            android:textSize="@dimen/text_medium"
            app:backgroundTint="@null"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
