<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <HorizontalScrollView
        android:id="@+id/layout_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingHorizontal="@dimen/spacing_medium"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/toDoChip"
                style="@style/TextStyle.LabelMedium.ChipStyle.Todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/status_todo"
                tools:text="5 Todo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/InProgressChip"
                style="@style/TextStyle.LabelMedium.ChipStyle.InProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/status_inprogress"
                tools:text="5 Inprogress" />

            <com.google.android.material.chip.Chip
                android:id="@+id/DoneChip"
                style="@style/TextStyle.LabelMedium.ChipStyle.Done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/status_done"
                tools:text="5 Done" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>