<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19375" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_bar_color"
        app:layout_constraintBottom_toTopOf="@id/guideline_19"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_view_search"
        style="@style/TextStyle.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/search_edit_text_background"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/search"
        android:padding="16dp"
        android:inputType="text"
        android:textCursorDrawable="@drawable/cusom_cursor"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bar_color"
        app:layout_constraintBottom_toTopOf="@id/guideline_19"
        app:layout_constraintTop_toBottomOf="@id/text_view_search"
        app:layout_constraintVertical_bias="1.0"
        app:tabGravity="fill"
        app:tabIndicator="@drawable/custom_tab_indicator"
        app:tabMode="fixed"
        app:tabTextColor="@color/on_background_87">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team"

            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal"

            />

    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>