<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmation_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="32dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@drawable/drag_handle" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextStyle.TitleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/change_status_description"
                android:textColor="@color/on_background_38" />

            <ImageButton
                android:id="@+id/button_confirm_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/background"
                android:src="@drawable/ic_done"
                app:tint="@color/primary" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:id="@+id/toggle_group_statuses"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_todo"
                style="@style/Widget.Material3.Button.TextButton.ToggleButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/status_todo"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyle.TitleMedium"
                android:focusable="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/on_background_38" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_in_progress"
                style="@style/Widget.Material3.Button.TextButton.ToggleButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="false"
                android:text="@string/status_inprogress"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyle.TitleMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/on_background_38" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_done"
                style="@style/Widget.Material3.Button.TextButton.ToggleButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="false"
                android:text="@string/status_done"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyle.TitleMedium" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
